# aCORN_MPM

./: .gitignore  BaseDataScanner.cc  BaseDataScanner.hh  DirectedGraph.hh  Doxyfile  Makefile  PMT_Gainmatcher.cc  README.txt  ReducedDataScanner.cc  ReducedDataScanner.hh  RunSetScanner.cc
Analysis/: AcornCalibrator.cc  AcornCalibrator.hh  AcornDB.cc  AcornDB.hh  BaseDataScanner.cc  BaseDataScanner.hh  PMTsPlugin.cc  PMTsPlugin.hh  PluginInterpolator.cc  PluginInterpolator.hh  Positioner.cc  Positioner.hh  PulserPlugin.cc  PulserPlugin.hh  ReducedDataScanner.cc  ReducedDataScanner.hh  ResponseMatrix.cc  ResponseMatrix.hh  RunAccumulator.cc  RunAccumulator.hh  RunMetadata.cc  RunMetadata.hh  RunSetScanner.cc  RunSetScanner.hh  SegmentSaver.cc  SegmentSaver.hh  SimWishboneSmearer.cc  SimWishboneSmearer.hh  SourceCalPlugin.cc  SourceCalPlugin.hh  WishboneFit.cc  WishboneFit.hh  WishbonePlugin.cc  WishbonePlugin.hh
Aux/: DBDescription.txt  Notes.txt  elemesholve_analytical_transverse_integrated_fields.txt
BaseTypes/: CalPeak.hh  CompileVersion.cc  CompileVersion.hh  Enums.hh  TagCounter.cpp  TagCounter.hh  aCornCompileVersion.cc  aCornCompileVersion.hh
IOUtils/: ControlMenu.cc  ControlMenu.hh  ManualInfo.cc  ManualInfo.hh  OutputManager.cpp  OutputManager.hh  PathUtils.cc  PathUtils.hh  QFile.cc  QFile.hh  RangeConfigFile.cc  RangeConfigFile.hh  SMExcept.cc  SMExcept.hh  TextTableReader.cc  TextTableReader.hh  strutils.cc  strutils.hh
MathUtils/: DirectedGraph.hh
Physics/: BetaSpectrum.cc  BetaSpectrum.hh  Collimator.cc  Collimator.hh  ElectronBindingEnergy.cc  ElectronBindingEnergy.hh  Enums.hh  FloatErr.cc  NuclEvtGen.cc  NuclEvtGen.hh  Uncorrelated_3Body.cc  Uncorrelated_3Body.hh  UnpolarizedBeta.cc  UnpolarizedBeta.hh  UnpolarizedNeutronDecay.cc  UnpolarizedNeutronDecay.hh  aSpectrum.cc  aSpectrum.hh
ROOTUtils/: EnumerationFitter.cc  EnumerationFitter.hh  GraphUtils.cc  GraphUtils.hh  GraphicsUtils.cc  GraphicsUtils.hh  HistogramSequenceFitter.cc  HistogramSequenceFitter.hh  LinHistCombo.cc  LinHistCombo.hh  MultiGaus.cc  MultiGaus.hh  SQL_Utils.cc  SQL_Utils.hh  StyleSetup.cc  TChainScanner.cpp  TChainScanner.hh  TSpectrumUtils.cc  TSpectrumUtils.hh
Scripts/EField/: EndField.py  InteriorField.py  ProtonDeflection.py  elemesholve_Scan.py  elemesholve_toy_plot.py
Scripts/calib/: BFieldMaps.py  CalDB.py  SourceCal.py  Triangulation.py
Scripts/launchers/: GeantGenMacroTemplate.mac  (+3 more)
Standalone/: BetaSpectrometerScanner.cc  CalibSpectra.cc  CircleFit.cc  DetectorPhotoFits.cc  FieldMapFitter.cc  MagFitter.cc  Nab_Dalitz.cc  PMT_Gainmatcher.cc  ReducedToROOT.cc  SpectrumShape.cc  Test_Gluck_MC.cc  WishboneScanner.cc  WishboneTemplateRate.cc
aCORN_G4/: CMakeLists.txt  aCORN_G4_prod.cc  aCORN_MC_Analyzer.cc  aCORN_MC_Analyzer.hh
aCORN_G4/include/: AnalysisManager.hh  AnalyzerBase.hh  Construct_All.hh  Construct_Scintillator.hh  Construct_e_Collimator.hh  Construction_Utils.hh  EventAction.hh  Field.hh  MCEvent.hh  PhysicsList.hh  PhysicsList_495.hh  PhysicsList_Livermore.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  PrimaryInfo.hh  ROOT_Headers.hh  RunAction.hh  SteppingAction.hh  SteppingAction_Verbose.hh  TrackInfo.hh  TrackerHit.hh  TrackerSD.hh
aCORN_G4/src/: AnalysisManager.cc  AnalyzerBase.cc  Construct_All.cc  Construct_Scintillator.cc  Construct_e_Collimator.cc  Construction_Utils.cc  EventAction.cc  Field.cc  MCEvent.cc  PhysicsList_495.cc  PhysicsList_Livermore.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc  SteppingAction_Verbose.cc  TrackerHit.cc  TrackerSD.cc
aCORN_MPM.xcodeproj/: project.pbxproj
(+14 files in other folders)
